--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
-TTS>=0.14.5
+TTS==0.22.0
+transformers==4.38.2  # Fixes BeamSearchScorer error
+pandas==1.5.3        # Compatible with TTS==0.22.0
 sounddevice>=0.4.6
 soundfile>=0.12.1
-gradio>=3.50
-numpy>=1.23
+gradio==3.36.1       # Compatible with pandas==1.5.3
+numpy==1.26.4
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.2
+setuptools<81
+torch==2.2.2
+torchvision==0.17.2
+torchaudio==2.2.2
